# qrode

./: .gitignore  Cargo.toml  README.md  convert.sh  out.json  qrode_url.json  spec.md
benches/: optimizer_hot_loop.rs
src/: cli.rs  lib.rs  main.rs  scoring.rs  target_adapter.rs  validator.rs
src/optimizer/: mod.rs
src/qr_core/: mod.rs
