[package]
name = "qrode"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5", features = ["derive"] }
image = { version = "0.25", default-features = true }
indicatif = "0.17"
qrcodegen = "1.8"
quircs = "0.10"
rand = "0.8"
rand_xoshiro = "0.6"
rayon = "1.10"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"

[dev-dependencies]
criterion = { version = "0.5", features = ["html_reports"] }

[[bench]]
name = "optimizer_hot_loop"
harness = false
